--- a/daemon/Gopkg.toml
+++ b/daemon/Gopkg.toml
@@ -1,18 +1,18 @@
 [[constraint]]
   name = "github.com/fsnotify/fsnotify"
-  version = "1.4.7"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/google/gopacket"
-  version = "~1.1.14"
+  branch = "master"
 
 [[constraint]]
   name = "google.golang.org/grpc"
-  version = "~1.11.2"
+  branch = "master"
 
 [[constraint]]
   name = "github.com/evilsocket/ftrace"
-  version = "~1.2.0"
+  branch = "master"
 
 [prune]
   go-tests = true
