simplify nftables.conf

--- a/nftables.conf
+++ b/nftables.conf
@@ -1,29 +1,33 @@
+
+
 flush ruleset
 
-# ipv4 can pass through firewall if prompt or rule allows
-table ip TINYSNITCH {
-
-	chain OUTPUT {
-		type filter hook input priority filter; policy drop;        # drop by default
+table ip tinysnitch {
+	chain inbound {
+		type filter hook input priority filter; policy drop;
 		ip protocol tcp ct state established counter accept         # allow tcp established state
-		ip protocol tcp ct state != established counter queue num 0 # firewall gets all other tcp states
+		ip protocol tcp ct state new,related counter queue num 0 # firewall gets all other tcp states
 		ip protocol != tcp counter queue num 0                      # firewall gets all other protos
-		meta mark 0x00018ba5 counter reject                         # firewall marks packets to be dropped and nft drops them
 	}
 
-	chain INPUT {
-		type filter hook output priority filter; policy drop;       # drop by default
+	chain outbound {
+		type filter hook output priority filter; policy drop;
 		ip protocol tcp ct state established counter accept         # allow tcp established state
-		ip protocol tcp ct state != established counter queue num 0 # firewall gets all other tcp states
+		ip protocol tcp ct state new,related counter queue num 0 # firewall gets all other tcp states
 		ip protocol != tcp counter queue num 0                      # firewall gets all other protos
-		meta mark 0x00018ba5 counter reject                         # firewall marks packets to be dropped and nft drops them
 	}
-
 }
 
-# ipv6 is all dropped
-table ip6 TINYSNITCH {
-	chain inbound    { type filter hook input   priority filter; policy drop; }
-	chain outbound   { type filter hook output  priority filter; policy drop; }
-	chain forwarding { type filter hook forward priority filter; policy drop; }
+table ip6 tinysnitch {
+	chain inbound {
+		type filter hook input priority filter; policy drop;
+	}
+
+	chain outbound {
+		type filter hook output priority filter; policy drop;
+	}
+
+	chain forwarding {
+		type filter hook forward priority filter; policy drop;
+	}
 }
