simplify nftables.conf

--- a/nftables.conf
+++ b/nftables.conf
@@ -1,33 +1,31 @@
-
-
 flush ruleset
+
+# ipv4
+# - if proto=tcp and state=established then accept
+# - else send to firewall via netfilter_queue, which will call NF_ACCEPT or NF_DROP
 
 table ip tinysnitch {
 	chain inbound {
 		type filter hook input priority filter; policy drop;
-		ip protocol tcp ct state established counter accept         # allow tcp established state
-		ip protocol tcp ct state new,related counter queue num 0 # firewall gets all other tcp states
-		ip protocol != tcp counter queue num 0                      # firewall gets all other protos
+		ip protocol tcp ct state established counter accept
+        counter queue num 0
 	}
-
 	chain outbound {
 		type filter hook output priority filter; policy drop;
-		ip protocol tcp ct state established counter accept         # allow tcp established state
-		ip protocol tcp ct state new,related counter queue num 0 # firewall gets all other tcp states
-		ip protocol != tcp counter queue num 0                      # firewall gets all other protos
+		ip protocol tcp ct state established counter accept
+        counter queue num 0
+	}
+	chain forwarding {
+		type filter hook forward priority filter; policy drop;
+		ip protocol tcp ct state established counter accept
+        counter queue num 0
 	}
 }
 
+# drop all ipv6
+
 table ip6 tinysnitch {
-	chain inbound {
-		type filter hook input priority filter; policy drop;
-	}
-
-	chain outbound {
-		type filter hook output priority filter; policy drop;
-	}
-
-	chain forwarding {
-		type filter hook forward priority filter; policy drop;
-	}
+	chain inbound    { type filter hook input   priority filter; policy drop; }
+	chain outbound   { type filter hook output  priority filter; policy drop; }
+	chain forwarding { type filter hook forward priority filter; policy drop; }
 }
