--- a/nftables.conf
+++ b/nftables.conf
@@ -4,7 +4,7 @@ flush ruleset
 # - if proto=tcp and state=established then accept
 # - else send to firewall via netfilter_queue, which will call NF_ACCEPT or NF_DROP
 
-table ip tinysnitch {
+table ip tiny-snitch {
 	chain inbound {
 		type filter hook input priority filter; policy drop;
 		ip protocol tcp ct state established counter accept
@@ -24,7 +24,7 @@ table ip tinysnitch {
 
 # drop all ipv6
 
-table ip6 tinysnitch {
+table ip6 tiny-snitch {
 	chain inbound    { type filter hook input   priority filter; policy drop; }
 	chain outbound   { type filter hook output  priority filter; policy drop; }
 	chain forwarding { type filter hook forward priority filter; policy drop; }
